After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 666242 - Separators in menuitem are not vertically aligned
Separators in menuitem are not vertically aligned
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-12-15 11:20 UTC by Andrea Cimitan
Modified: 2011-12-15 17:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
menuitem: don't request twice the padding for separator menu items (1.43 KB, patch)
2011-12-15 15:02 UTC, Cosimo Cecchi
committed Details | Review
menuitem: force odd height if we're not using wide separators (1.54 KB, patch)
2011-12-15 15:02 UTC, Cosimo Cecchi
committed Details | Review
menuitem: properly respect padding when drawing the separators (1.79 KB, patch)
2011-12-15 15:02 UTC, Cosimo Cecchi
committed Details | Review

Description Andrea Cimitan 2011-12-15 11:20:25 UTC
separators in menuitems are not vertically aligned, the padding is not even. applies to both wide and normal separators
Comment 1 Cosimo Cecchi 2011-12-15 11:24:27 UTC
Yes, I'm on this.
Comment 2 Cosimo Cecchi 2011-12-15 15:02:35 UTC
Created attachment 203582 [details] [review]
menuitem: don't request twice the padding for separator menu items

Padding was requested twice for separator menu items.
Comment 3 Cosimo Cecchi 2011-12-15 15:02:47 UTC
Created attachment 203583 [details] [review]
menuitem: force odd height if we're not using wide separators

So that the 1px line can receive the same amount of space above and
below.
Comment 4 Cosimo Cecchi 2011-12-15 15:02:52 UTC
Created attachment 203584 [details] [review]
menuitem: properly respect padding when drawing the separators

Use the padding when calculating the draw coordinates of the separator.
Comment 5 Cosimo Cecchi 2011-12-15 17:54:48 UTC
Attachment 203582 [details] pushed as 20e94c1 - menuitem: don't request twice the padding for separator menu items
Attachment 203583 [details] pushed as 713df0c - menuitem: force odd height if we're not using wide separators
Attachment 203584 [details] pushed as 4d76b10 - menuitem: properly respect padding when drawing the separators

Pushed to master.