menuitem: don't request twice the padding for separator menu items

Padding was requested twice for separator menu items.

https://bugzilla.gnome.org/show_bug.cgi?id=666242